peac_dev/force-app/main/default/objects/Distributor__c/Distributor__c.object-meta.xml
<CustomObject>
    <label>Distributor</label>
    <nameField>
        <displayFormat>DB-{0000}</displayFormat>
        <label>Distributor  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>