peac_dev/force-app/main/default/objects/Distributor__c/fields/Distributor_Address__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Address__c</fullName>
    <formula>Account__r.Business_Address__c + &apos; &apos; + Account__r.Business_City__c + &apos; &apos; +  &apos; &apos; +  Account__r.Business_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Address</label>
    <type>Text</type>
</CustomField>